# Raytracer

./: .codecov.sh  .doxygen.conf  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  codecov.yml  configure.bat  imgui.ini  run.bat  run.sh
.github/workflows/: coverage.yml  linux.yml
Documentation/: .doxygen.conf  conf.py  implementation.md  index.rst  specification.md  testing.md  timesheet.md
Documentation/_static/: mathjax_conf.js
Documentation/_templates/: layout.html
Documentation/api/: class_aabb.rst  class_bvhnode.rst  class_camera.rst  class_dielectric.rst  class_engine.rst  class_lambertian.rst  class_material.rst  class_metal.rst  class_mix.rst  class_primitive.rst  class_primitivelist.rst  class_ray.rst  class_raytracer.rst  class_sphere.rst  class_vector3_d.rst  class_view_hierarchy.rst  class_window.rst  define__window_8h_1abcde84ea0ef5f934384e4620f092c85a.rst  dir_Source.rst  dir_Source_cli.rst  dir_Source_core.rst  dir_Source_gui.rst  dir_Source_materials.rst  dir_Source_primitives.rst  file_Source_CMakeLists.txt.rst  file_Source_cli_cli.cpp.rst  file_Source_core_Camera.cpp.rst  file_Source_core_Camera.h.rst  file_Source_core_Engine.cpp.rst  file_Source_core_Engine.h.rst  file_Source_core_Ray.cpp.rst  file_Source_core_Ray.h.rst  file_Source_core_Raytracer.cpp.rst  file_Source_core_Raytracer.h.rst  file_Source_core_Utility.h.rst  file_Source_core_Vector3D.h.rst  file_Source_core_main.cpp.rst  file_Source_gui_Window.cpp.rst  file_Source_gui_Window.h.rst  file_Source_materials_Dielectric.cpp.rst  (+84 more)
Documentation/md/: implementation.md  testing.md
Documentation/reports/: week1.md  week2.md  week3.md  week4.md  week5.md  week6.md
Documentation/rst/: api.rst  (+2 more)
Source/: CMakeLists.txt  Camera.cpp  Camera.h  Dummyclass.cpp  Dummyclass.h  Engine.cpp  Engine.h  Ray.cpp  Ray.h  Utility.cpp  Utility.h  Vector3D.h  camera.cpp  camera.h  main.cpp  ray.cpp  ray.h  utility.cpp  utility.h  vector3D.cpp  vector3D.h
Source/cli/: cli.cpp
Source/core/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  Ray.cpp  Ray.h  Raytracer.cpp  Raytracer.h  Utility.cpp  Utility.h  Vector3D.cpp  Vector3D.h  main.cpp
Source/gui/: Gui.cpp  Gui.h  Mainwindow.cpp  Mainwindow.h  Window.cpp  Window.h  mainwindow.ui
Source/materials/: Brdf.cpp  Brdf.h  Dielectric.cpp  Dielectric.h  Lambertian.cpp  Lambertian.h  Material.h  Metal.cpp  Metal.h  Mix.cpp  Mix.h  dielectric.cpp  dielectric.h  lambertian.cpp  lambertian.h  material.h  metal.cpp  metal.h
Source/primitives/: Aabb.cpp  Aabb.h  Bvhnode.cpp  Bvhnode.h  Primitive.h  Primitivelist.cpp  Primitivelist.h  Sphere.cpp  Sphere.h  primitive.h  primitivelist.cpp  primitivelist.h  sphere.cpp  sphere.h
Test/: BvhnodeTest.cpp  CMakeLists.txt  CameraTest.cpp  DielectricTest.cpp  EngineTest.cpp  LambertianTest.cpp  MetalTest.cpp  PrimitivelistTest.cpp  RayTest.cpp  Vector3DTest.cpp  cameratest.cpp  dummytest.cpp  lambertiantest.cpp  raytest.cpp  vector3Dtest.cpp
doc/: .doxygen.conf
html/: Brdf_8h_source.html  Camera_8h.html  Camera_8h_source.html  Dielectric_8h.html  Dielectric_8h_source.html  Engine_8h.html  Engine_8h_source.html  Lambertian_8h.html  Lambertian_8h_source.html  Material_8h.html  Material_8h_source.html  Metal_8h.html  Metal_8h_source.html  Primitive_8h.html  Primitive_8h_source.html  Primitivelist_8h_source.html  Ray_8h_source.html  Sphere_8h_source.html  Utility_8h.html  Utility_8h_source.html  Vector3D_8h_source.html  annotated.html  classBrdf-members.html  classBrdf.html  classCamera-members.html  classCamera.html  classDielectric-members.html  classDielectric.html  classEngine-members.html  classEngine.html  classLambertian-members.html  classLambertian.html  classMaterial-members.html  classMaterial.html  classMetal-members.html  classMetal.html  classPrimitive-members.html  classPrimitive.html  classPrimitivelist-members.html  classPrimitivelist.html  (+91 more)
src/: CMakeLists.txt  EditorMain.cpp
src/cli/: cli.cpp
src/core/: Camera.cpp  Camera.h  Ray.cpp  Ray.h  Raytracer.cpp  Raytracer.h  Vector3D.cpp  Vector3D.h  buffers.h  main.cpp  utility.cpp  utility.h
src/editor/: Editor.cpp  Editor.h  Graphics.cpp  Graphics.h  Gui.cpp  Gui.h  Input.cpp  Input.h  Types.h  Widgets.cpp  Widgets.h  Windowing.cpp  Windowing.h
src/editor/platform/graphics/: Graphics.h
src/editor/platform/graphics/opengl/: Graphics.cpp  Graphics.h
src/editor/shaders/: frag.glsl  vert.glsl
src/editor/styles/: DarkTheme.h
src/editor/widgets/: Widget.h
src/gui/: Gui.cpp  Gui.h  Window.cpp  Window.h  style.h
src/hittables/: Aabb.cpp  Aabb.h  Bvhnode.cpp  Bvhnode.h  Hitlist.cpp  Hitlist.h  Hittable.h  Mesh.cpp  Mesh.h  Primitive.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/io/: Io.cpp  Io.h  MeshLoader.cpp  meshloader.cpp  meshloader.h  stbi.h
src/logging/: Logging.cpp  Logging.h  logging.cpp  logging.h
src/materials/: Dielectric.cpp  Dielectric.h  Lambertian.cpp  Lambertian.h  Material.h  Metal.cpp  Metal.h  Mix.cpp  Mix.h
src/mesh/: Mesh.cpp  Mesh.h
src/primitives/: Bvhnode.cpp  Mesh.h  Sphere.cpp  Triangle.h
src/rt_old/cli/: cli.cpp
src/rt_old/core/: Camera.h  Ray.cpp  Ray.h  Raytracer.h  buffers.h  utility.cpp
src/rt_old/materials/: Dielectric.h  Lambertian.cpp  Material.h  Metal.cpp  Metal.h  Mix.h
src/rt_old/primitives/: Aabb.h  Bvhnode.h  Hitlist.cpp  Hitlist.h  Sphere.cpp  Triangle.h
src/rt_old/samplers/: Sampler.h
src/rt_old/threads/: Threadpool.cpp
src/samplers/: FastSampler.cpp  FastSampler.h  Fastsampler.cpp  Fastsampler.h  RandomMonteCarloSampler.cpp  RandomMonteCarloSampler.h  Randommontecarlosampler.cpp  Randommontecarlosampler.h  Sampler.cpp  Sampler.h
src/scene/: Components.cpp  Components.h  Scene.cpp  Scene.h
src/threads/: Threadpool.cpp  Threadpool.h
src/types/: Types.h
src/util/: Math.h  Types.h
test/: AabbTest.cpp  BvhnodeTest.cpp  CMakeLists.txt  CameraTest.cpp  DielectricTest.cpp  LambertianTest.cpp  MetalTest.cpp  PrimitivelistTest.cpp  RayTest.cpp  SphereTest.cpp  TriangleTest.cpp
test/test_old/: BvhnodeTest.cpp  CMakeLists.txt  RayTest.cpp  Vector3DTest.cpp
(+75 files in other folders)
